# github-actions

./: .gitignore
.github/workflows/: lint-slack.yml  publish-slack.yml  test-slack.yml
github-artifacts/: README.md  action.yml  pyproject.toml  run_action.py
github-artifacts/github_artifacts_reader/: __init__.py
github-artifacts/github_artifacts_reader/clients/: __init__.py  github_client.py
github-artifacts/github_artifacts_reader/constants/: __init__.py  github_constants.py
github-artifacts/tests/: __init__.py  test_github_client.py  test_run_action.py
slack/: LICENSE  README.md  action.yml  pyproject.toml  run_action.py
slack/.github/workflows/: example.yml  publish.yml  test.yml
slack/slack_reporter/clients/: __init__.py  slack_client.py
slack/slack_reporter/constants/: __init__.py  slack_constants.py
slack/tests/: __init__.py  test_run_action.py  test_slack_client.py
