[project]
name = "slack-reporter"
version = "0.0.1"
description = "Utility to interact with slack"
authors = [{name = "nsingla"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "slack-sdk==3.37.0",
]

[project.optional-dependencies]
dev = [
    "setuptools==80.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slack_reporter"]

[tool.uv]
dev-dependencies = [
    "setuptools==80.9.0",
]
